--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "foundation-sites": "^6.5.0",
     "node-sass": "^4.10.0",
     "react": "^16.6.0",
     "react-addons-css-transition-group": "^15.6.2",
