--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "foundation-sites": "^6.5.0",
+    "lodash": "^4.17.11",
     "node-sass": "^4.10.0",
     "react": "^16.6.0",
     "react-addons-css-transition-group": "^15.6.2",
