--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.6.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.6.0",
+    "react-grid-system": "^4.3.1",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
