--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "styled-components": "^4.1.1"
   },
   "scripts": {
+    "gitPushDev":"git push origin dev",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
