optimize package.json

--- a/package.json
+++ b/package.json
@@ -3,33 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@rebass/grid": "^6.0.0-4",
-    "@types/jest": "^23.3.9",
-    "@types/lodash": "^4.14.118",
-    "@types/node": "^10.12.9",
-    "@types/react": "^16.7.6",
-    "@types/react-dom": "^16.0.9",
-    "@types/react-redux": "^6.0.9",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/react-router-redux": "^5.0.16",
-    "@types/rebass__grid": "^6.0.1",
-    "@types/styled-components": "^4.1.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.86.0",
-    "lodash": "^4.17.11",
-    "node-sass": "^4.10.0",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-redux": "^5.1.0",
-    "react-router-dom": "^4.3.1",
-    "react-router-redux": "^4.0.8",
-    "react-scripts": "^2.1.1",
-    "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.5",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^4.1.1",
-    "typescript": "^3.1.6"
+    "lodash": "4.17.11",
+    "react": "16.6.0",
+    "react-dom": "16.6.0",
+    "react-redux": "5.1.0",
+    "react-router-dom": "4.3.1",
+    "react-router-redux": "4.0.8",
+    "react-scripts": "2.1.1",
+    "redux": "4.0.1",
+    "redux-devtools-extension": "2.13.5",
+    "redux-thunk": "2.3.0",
+    "styled-components": "4.1.1"
+  },
+  "devDependencies": {
+    "@rebass/grid": "6.0.0-4",
+    "@types/jest": "23.3.9",
+    "@types/lodash": "4.14.118",
+    "@types/node": "10.12.9",
+    "@types/react": "16.7.6",
+    "@types/react-dom": "16.0.9",
+    "@types/react-redux": "6.0.9",
+    "@types/react-router-dom": "4.3.1",
+    "@types/react-router-redux": "5.0.16",
+    "@types/rebass__grid": "6.0.1",
+    "@types/styled-components": "4.1.0",
+    "babel-cli": "6.26.0",
+    "babel-preset-flow": "6.23.0",
+    "flow-bin": "0.86.0",
+    "node-sass": "4.10.0",
+    "typescript": "3.1.6"
   },
   "scripts": {
     "gitPushDev": "git push origin dev",
