--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "rect-learn-netflix",
   "version": "0.1.0",
   "private": true,
+  "repository":{
+    "type": "git",
+    "url":"git+https://github.com/taraswww777/rect-learn-netflix.git"
+  },
   "dependencies": {
+    "cross-env": "5.2.0",
+    "express": "4.16.4",
+    "forever": "0.15.3",
     "lodash": "4.17.11",
     "react": "16.6.0",
     "react-dom": "16.6.0",
@@ -28,10 +35,10 @@
     "@types/rebass__grid": "6.0.1",
     "@types/styled-components": "4.1.0",
     "node-sass": "4.10.0",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.16.0",
-    "tslint-react": "^3.6.0",
-    "typescript": "^3.1.6"
+    "tslint": "5.11.0",
+    "tslint-config-prettier": "1.16.0",
+    "tslint-react": "3.6.0",
+    "typescript": "3.1.6"
   },
   "scripts": {
     "gitPushDev": "git push origin dev",
