--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "rect-learn-netflix",
   "version": "0.1.0",
   "private": true,
-  "repository":{
+  "repository": {
     "type": "git",
-    "url":"git+https://github.com/taraswww777/rect-learn-netflix.git"
+    "url": "git+https://github.com/taraswww777/rect-learn-netflix.git"
   },
   "dependencies": {
     "cross-env": "5.2.0",
@@ -34,7 +34,7 @@
     "@types/react-router-redux": "5.0.16",
     "@types/rebass__grid": "6.0.1",
     "@types/styled-components": "4.1.0",
-    "node-sass": "4.10.0",
+    "nodemon": "1.18.6",
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.16.0",
     "tslint-react": "3.6.0",
@@ -47,7 +47,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "tslint -c tslint.json 'src/**/*.tsx",
-    "server-prod": "npm run build && node server"
+    "server-express-prod": "npm run build && nodemon npm run server-express",
+    "server-express": "nodemon server-express"
   },
   "eslintConfig": {
     "extends": "react-app"
